index.css
/* Navigation */
#navigation{
    list-style: none;
    padding: 10px;
    margin: 0 10px;
}

.navigation-item{
    display: block;
    color: white;
    box-sizing: border-box;
    text-align: center;
    padding: 3px;
    border-radius: 7px;
    margin: 0 10px;
}

#navigation a:hover{
    text-decoration: none;
    background-color: wheat;
    color: #110C11;
}

#navigation-body{
    border: 1px solid black;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 999;
    background-color: #110C11;
}

@media only screen and (max-width: 634px){
    .navigation-item{
        width: 100%;
    }
}

/* Introduction */
#introduction-img{
    padding: 10px;
}

#introduction-img img{
    height : 500px;
    width : 300px;
    border : 4px solid black;
    border-radius: 250px;
}

#introduction{
    padding: 50px 20px;
    margin: 0px;
    padding-top: 100px;
    background-color: darkslategrey;
}

.removeBorder{
    border-right: none !important;
    border-bottom: 1px solid black;
}

.addSpacing{
    margin-top: 10px;
}

#introduction-body{
    text-align: center;
    padding: 10px;
    background-color: #110C11;
    color: silver;
}

/* Profile */
#profile{
    width: 100%;
    margin: 0;
    padding: 50px 0;
    background-color: burlywood;
}

h2{
    text-align: center;
}

#languages,#tools,#concepts,#education{
    width: 100%;
}

.experience label,.experience{
    display: block;
    text-align: center;
}

/* Experience */
#experience{
    padding: 50px 0;
    background-color: whitesmoke;
}

.carousel-item{
    background-color: #110C11;
    color: white;
}

.card{
    color: #110C11;
    width: 80%;
    margin: 15px auto;
}

/* Projects */
#projects{
    padding: 50px 0;
}

/* Contact */
#contact{
    padding: 50px 0;
    color: white;
    background-color: #434242;
}

#contact h2{
    font-size: 50px;
    font-weight: 200;
}

#contact a, #contact a:hover{
    text-decoration: none;
    color: white;
}

#contact img:hover, #contact label:hover{
    cursor: pointer;
}

/* Footer */
#footer{
    text-align: center;
    background-color: #434242;
    color: white;
    padding: 10px;
}

/* Extra */
html,body{
    height: 100%;
    width: 100%;
}

#profile,#introduction,#experience,#contact,#projects{
    width: 100%;
}

.makeHeight100{
    height: 100%;
}

.active-nav{
    background-color: wheat;
    color: #110C11;
}

.makeNavVertical{
    margin: 10px;
    width: 100%; 
}

.changeDefaultMargin{
    margin-top: 270px !important;
    padding-bottom: 50px !important;
}

.labelH2{
    font-weight: 200;
    font-size: 25px;
    text-align: center;
    padding: 10px 14px;
    border-right: 2px solid;
}

hr{
    border-top: 1px solid;
    width: 100%;
}

